--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 		<imagetarget id='rmn' src='targets/rmn.png'></imagetarget>
 		<imagetarget id='bear' src='targets/bear.png'></imagetarget>
 		<imagetarget id='Logo KE' src='targets/Logo KE.jpeg'></imagetarget>
+		<imagetarget id='Logo RTV3D completo' src='targets/Logo RTV3D completo.png'></imagetarget>
+		<imagetarget id='Logo RTV3D completo 1' src='targets/Logo RTV3D completo 1.png'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <div id="startARDiv" class="ctaDiv">
